--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,21 @@ script: tox
 jobs:
   include:
     - stage: "Unit Tests"
+      name: "Python 3.5 on Linux"
       python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8
+    - name: "Python 3.6 on Linux"
+      python: 3.6
+    - name: "Python 3.7 on Linux"
+      python: 3.7
+    - name: "Python 3.8 on Linux"
+      python: 3.8
+    - name: "Python 3.8 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version 3.8.0
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
     - stage: "Documentation"
       python: 3.8
       install: pip install .[docs]
