Test with Python 3.8 on macOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,17 @@ script: tox
 jobs:
   include:
     - stage: "Unit Tests"
+      name: "Python 3.5 on Linux"
       python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8
+    - name: "Python 3.6 on Linux"
+      python: 3.6
+    - name: "Python 3.7 on Linux"
+      python: 3.7
+    - name: "Python 3.8 on Linux"
+      python: 3.8
+    - name: "Python 3.8 on macOS"
+      os: osx
+      python: 3.8
     - stage: "Documentation"
       python: 3.8
       install: pip install .[docs]
